# nano-pass-compiler

./: .gitignore  day0plan.md
DAY 1/: README.md
DAY 10/: README.md  parser_for_arithmetic_expressions.cpp  recursive_descent_parser_theory_and_how_to_make_one.md
DAY 11/: README.md
DAY 12/: README.md
DAY 13/: README.md
DAY 14/: README.md
DAY 15/: README.md
DAY 16/: README.md
DAY 17/: README.md
DAY 18/: README.md
DAY 19/: README.md
DAY 2/: README.md
DAY 20/: README.md
DAY 21/: README.md
DAY 22/: README.md
DAY 23/: README.md
DAY 24/: README.md
DAY 25/: README.md
DAY 26/: README.md
DAY 27/: README.md
DAY 28/: README.md
DAY 29/: README.md
DAY 3/: README.md  desugar_forwhile_+=.cpp
DAY 30/: README.md
DAY 31/: README.md
DAY 32/: README.md
compiler/: 01_before_bool.dot  01_parse.dot  02_after_bool.dot  02_for.dot  03_assign.dot  04_if.dot  04_if_else.dot  05_anf.dot  CMakeLists.txt  main.cpp  out.ll  out.s  output.s  prog  program  tempCodeRunnerFile.cpp  test.nano
compiler/ast/: expr.h  stmt.h
compiler/codegen/: llvm_codegen.cpp  llvm_codegen.h  lower_expr.cpp  lower_expr.h  lower_stmt.cpp  lower_stmt.h
compiler/common/: error.h  source_location.h
compiler/ir/: cps.h  cps_printer.h  ir_printer.h
compiler/lexer/: lexer.h  token.h
compiler/parser/: parser.h
compiler/passes/: anf_pass.h  cps_pass.h  desugar_bool.h  desugar_for.h  desugar_if_else.h  desugar_inc_dec.h  desugar_plus_assign.h
compiler/sema/: resolve_scopes.h  symbol.h  symbol_table.h  type.h  type_check.h
compiler/visualize/: ast_graphviz.h
(+49 files in other folders)
